--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,14 @@ main {
     margin: 0 auto;
 }
 
+footer {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    background-color: black;
+    color: #fafafa;
+}
+
 .banner {
     width: 100%;
 }
@@ -89,6 +97,9 @@ section:not(#start) {
     margin: 0 auto;
     padding: 32px 0;
 }
+
+
+/* Estilização section products */
 
 #products {
     width: 100%;
@@ -127,10 +138,66 @@ section:not(#start) {
 
 .product-img img {
     width: 100%;
-    box-shadow: 0px 0px 8px black;
+    box-shadow: 0px 0px 5px black;
 }
 
 .product-desc {
+    width: 100%;
+    text-align: center;
+    strong {
+        font-size: 24px;
+        font-weight: 350;
+    }
+    p {
+        color: #24242480;
+        font-size: 14px;
+    }
+}
+
+
+/* Estilização da section promotions */
+
+#promotions {
+    width: 100%;
+    /* padding: 20px; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#promotions h2 {
+    width: 100%;
+    text-transform: uppercase;
+    height: 64px;
+    line-height: 60px;
+    text-align: center;
+}
+
+.promotion {
+    width: 305px;
+    border-radius: 16px;
+    padding: 16px;
+    box-shadow: 0px 0px 8px #24242480;
+    transition: .5s;
+}
+
+.promotion:hover {
+    box-shadow: 0px 0px 12px #24242440;
+    transform: scale(1.03);
+}
+
+.pro-img {
+    width: 273px;
+    height: 394px;
+    overflow: hidden;
+}
+
+.promotion-img img {
+    width: 100%;
+    box-shadow: 0px 0px 5px black;
+}
+
+.promotion-desc {
     width: 100%;
     text-align: center;
     strong {
